--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@ body {
     background-image: url("3-camp-naukma.jpg");
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-size: cover;
-    background-color: #518d9c
+    background-color: white;
 }
 
 .panel{
@@ -31,24 +31,24 @@ body {
 }
 
 .label-son{
-    margin-left: 18%;
+    margin-left: 17%;
 }
 
 .logo-naukma{
     position: absolute;
-    left: 20px;
+    left: 1%;
     top: 12px;
 }
 
 .name{
     font-size: 44px;
-    min-width: 335px;
+    min-width: 350px;
     margin-top: 18px;
 }
 
 .logo{
     font-size: 16px;
-    min-width: 335px;
+    min-width: 350px;
     margin-top: -8px;
 }
 
@@ -81,7 +81,7 @@ body {
 .container{
     padding-top:100px;
     width: 100%;
-    height: 900px;
+    height: 100vh;
 }
 
 .main-label{
@@ -93,19 +93,83 @@ body {
 }
 
 .logo_naukma_bw{
-    height: 400px;
-    width: 600px;
+    margin-top:100px ;
+    height: 234px;
+    width: 300px;
 }
+
 .about-us-btn{
+    margin-top: 90px;
+    margin-bottom: 40px;
     font-family: Courier New, monospace;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: bold;
     border: 2px solid white;
-    background: none;
+    background: rgba(46, 47, 46, 0.4);
+    width: 200px;
+    height: 75px;
+    border-radius: 2px;
+    transition: all 0.4s ease-in-out;
 }
+.about-us-btn:hover{
+    background: white;
+    color: #454545;
+    transition: all 0.4s ease-in-out;
+}
+
+.down-arrow{
+    margin-bottom: 20px;
+}
+
+.special-offers-parent{
+    width: 100%;
+    height: 600px;
+    background: white;
+    text-align: center;
+    padding-top: 10px;
+    font-size: 30px;
+    min-width: 395px;
+}
+
+.special-offers{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+.product-example{
+    width: 25%;
+    border: 1px solid #b0b0b0;
+    background: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transition: all 0.4s ease-in-out;
+    font-family: Georgia,serif;
+    font-size: 80%;
+    vertical-align: center;
+}
+.product-example:hover{
+    transform: scale(1.2);
+    border-radius: 3px;
+}
+
+.spec-of-image{
+    margin-top: 10px;
+    width: 90%;
+    height: auto;
+}
+
+.spec-of-description{
+    padding-top: 10px;
+    height: 45px;
+    font-family: Snell Roundhand,Georgia, cursive;
+}
+
 
 @media (max-width: 950px){
     .panel{
         flex-direction: column;
-        height: 120px;
     }
     .label{
         width: 100%;
@@ -125,13 +189,12 @@ body {
         width: 100%;
     }
     .panel-buttons{
-        top: -15px;
+        top: -29px;
         min-width: 335px;
         width: 100%;
         left: 0;
         justify-content: center;
     }
-
     .menu-button{
         font-size: 14px;
         margin-right: 3%;
@@ -142,6 +205,19 @@ body {
     }
 
     .container{
-        padding-top:120px;
+        padding-top:100px;
+    }
+    .logo_naukma_bw{
+        margin-top: 70px;
+    }
+    .about-us-btn {
+        margin-top: 100px;
+    }
+    .down-arrow{
+        margin-bottom: 32px;
+    }
+
+    .spec-of-description{
+        display: none;
     }
 }
