--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Courier New, monospace;
     color: #454545;
-    background-image: url("3-camp-naukma.jpg");
+    background-image: url("media/3-camp-naukma.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
