--- a/shop_main.css
+++ b/shop_main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Courier New, monospace;
     color: #454545;
-    background-image: url("3-camp-naukma.jpg");
+    background-image: url("media/3-camp-naukma.jpg");
     background-repeat: repeat;
     background-position: center center;
     background-attachment: scroll;
@@ -85,13 +85,19 @@ body {
     background: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
+.side-panel{
+    width: 20%;
+}
+
 .categories{
     width: 200px;
     font-size: 20px;
     border-right: 1px solid #b4b4b4;
     padding-left: 10px;
 }
+
 .category{
     padding-top: 15px;
     padding-left: 5px;
@@ -111,10 +117,11 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 0 2% 2%;
+    width: 50%;
 }
 
 .product{
-    width: 22%;
+    width: 25%;
     background: white;
     border-radius: 2px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
