--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ body {
     background: white;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     transition: all 0.4s ease-in-out;
-    font-family: Georgia,serif;
+    font-family: Book Antiqua, italic, serif;
     font-size: 80%;
     vertical-align: center;
 }
@@ -164,6 +164,7 @@ body {
     padding-top: 10px;
     height: 45px;
     font-family: Snell Roundhand,Georgia, cursive;
+    font-style: italic;
 }
 
 
