--- a/shop_main.css
+++ b/shop_main.css
@@ -141,6 +141,9 @@ body {
     padding-bottom: 3px;
     padding-left: 25px;
 }
+.sub-category:hover{
+    background: #eceeec;
+}
 
 .products-list{
     display: flex;
@@ -163,7 +166,7 @@ body {
 }
 .product-image {
     width: 100%;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 .product-image:hover{
     transform: scale(1.05);
