project with hosting

--- a/Backend/views/shopPage.ejs
+++ b/Backend/views/shopPage.ejs
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>KMA giftshop</title>
-    <link rel="stylesheet" type="text/css" href="shop_main.css"/>
+    <!-- LESS основний файл -->
+    <link rel="stylesheet/less" type="text/css" href="assets/less/shop.less"/>
+    <!-- LESS JavaScript компілятор -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
 </head>
+
 <body>
 <div class="panel row">
     <div class="label">
-        <img src="media/logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
+        <img src="assets/media/logo_naukma.png" class="logo-naukma" width="89.5" height="79.5">
         <div class="label-son">
             <div class="name">KMA GIFTSHOP</div>
             <div class="logo">Інтернет магазин могилянського мерчу</div>
@@ -16,28 +20,28 @@
     </div>
     <div class="panel-buttons-parent">
         <div class="panel-buttons">
-            <button class="menu-button" href="#">Головна</button>
+            <button class="menu-button">Головна</button>
             <button class="menu-button">Магазин</button>
             <button class="menu-button">Контакти</button>
-            <button class="menu-button"><img src="media/shopping_cart.png" class="cart-btn"></button>
         </div>
     </div>
 </div>
+
 <div class="shop-header">
     <div class="category-name">Всі товари</div>
 </div>
 <div class="container">
 
     <div class="side-panel">
-            <div class="side-panel-son">
+        <div class="side-panel-son">
             <div class="categories">
-                <div class="category">Жінки <img src="media/down_black.png" width="20" height="10"></div>
+                <div class="category">Жінки <img src="assets/media/down_black.png" width="20" height="10"></div>
                 <div class="sub-category">Світшоти</div>
                 <div class="sub-category">Худі</div>
                 <div class="sub-category">Футболки</div>
                 <div class="sub-category">Поло</div>
                 <div class="sub-category">Верхній одяг</div>
-                <div class="category">Чоловіки <img src="media/down_black.png" width="20" height="10"></div>
+                <div class="category">Чоловіки <img src="assets/media/down_black.png" width="20" height="10"></div>
                 <div class="sub-category">Світшоти</div>
                 <div class="sub-category">Худі</div>
                 <div class="sub-category">Футболки</div>
@@ -51,32 +55,32 @@
 
     <div class="products-list">
         <div class="product">
-            <img src="media/bomber1.jpg" class="product-image">
+            <img src="assets/media/bomber1.jpg" class="product-image">
             <div class="product-name">Бомбер</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="media/hoodie1.jpg" class="product-image">
+            <img src="assets/media/hoodie1.jpg" class="product-image">
             <div class="product-name">Худі рожеве</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="media/hoodie2.jpg" class="product-image">
+            <img src="assets/media/hoodie2.jpg" class="product-image">
             <div class="product-name">Худі класика</div>
             <div class="product-price">₴590.00</div>
         </div>
         <div class="product">
-            <img src="media/sweatshot1.jpg" class="product-image">
+            <img src="assets/media/sweatshot1.jpg" class="product-image">
             <div class="product-name">Світшот Петръ Могила</div>
             <div class="product-price">₴790.00</div>
         </div>
         <div class="product">
-            <img src="media/sweatshot2.jpg" class="product-image">
+            <img src="assets/media/sweatshot2.jpg" class="product-image">
             <div class="product-name">Світшот КМА з вишивкою</div>
             <div class="product-price">₴690.00</div>
         </div>
         <div class="product">
-            <img src="media/polo1.jpg" class="product-image">
+            <img src="assets/media/polo1.jpg" class="product-image">
             <div class="product-name">Поло КМА Airy</div>
             <div class="product-price">₴550.00</div>
         </div>
@@ -86,5 +90,6 @@
 
 </div>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
-</html>
